# happy-new-year

./: Cargo.toml  README.md  index.js  style.css
backend/: database.ts  index.ts
frontend/: index.html  run.bat
frontend/pkg/: new_years_bg.wasm  new_years_bg.wasm.d.ts
frontend/src/graphics/: colour.rs  mod.rs  sim.rs
frontend/src/graphics/fireworks/: colour_shift.rs  mod.rs  sparkle.rs
pkg/: new_years.d.ts  new_years.js  new_years_bg.wasm  package.json
src/: lib.rs
src/graphics/: mod.rs  sim.rs
src/graphics/fireworks/: colour_shift.rs  mod.rs  standard.rs
