[package]
name = "new_years"
version = "0.1.0"
authors = ["Jonas van der Schaaf <niet@jonasvanderschaaf.nl>", "Agung Andre <agungandre687@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.60"
rand = "0.8.5"
wasm-bindgen = "0.2.83"
getrandom = { version = "0.2.8", features = ["js"] }

[dependencies.web-sys]
version = "0.3.60"
features = ["CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement", "Window", "HtmlAudioElement"]

[profile.release]
lto = true
